# WorldsEngine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  ExperimentalEngine.sln  LICENSE  README.md  TODO.md  WorldsEngine.sln  compile_commands.json  meson.build  meson_options.txt  vcpkg.json
Converge/: Client.cpp  Client.hpp  Converge.rc  Converge.vcxproj  Converge.vcxproj.filters  ConvergeEventHandler.cpp  ConvergeEventHandler.hpp  DebugArrow.cpp  DebugArrow.hpp  LocospherePlayerSystem.cpp  LocospherePlayerSystem.hpp  Main.cpp  Manifest.xml  MathsUtil.cpp  MathsUtil.hpp  NetBase.cpp  NetMessage.cpp  NetMessage.hpp  Network.hpp  ObjectParentSystem.cpp  ObjectParentSystem.hpp  PhysHandController.cpp  PhysHandController.hpp  PhysHandSystem.cpp  PhysHandSystem.hpp  PidController.hpp  Server.cpp  Server.hpp  imgui.ini  imgui_editor.ini  meson.build  resource.h
DiscordSDK/: DiscordSDK.vcxproj  DiscordSDK.vcxproj.filters  meson.build
EngineLoader/: CMakeLists.txt  EventHandler.hpp  Main.cpp  MathsUtil.cpp  StartEditor.bat  blender_glbexport.py
EngineLoader/ProjectTemplate/: build.py
ExperimentalEngine/: 2DClip.hpp  AssetDB.cpp  AssetDB.hpp  AssetDBExplorer.cpp  Assets.cpp  Audio.cpp  Audio.hpp  BRDFLUTRenderer.cpp  BlurRenderPass.cpp  Camera.hpp  ChunkGenerator.hpp  ComponentEditorUtil.hpp  ComponentFuncs.cpp  ComponentFuncs.hpp  ComponentMetadata.hpp  Console.cpp  Console.hpp  CubemapConvoluter.cpp  CubemapLoader.cpp  CubemapLoader.hpp  D6JointEditor.hpp  D6JointEditor.inl  ESceneSerializationFunctions.cpp  EarlySDLUtil.cpp  EarlySDLUtil.hpp  Editor.cpp  Editor.hpp  EditorWindows.hpp  Engine.cpp  Engine.hpp  EntityEditor.cpp  EntityList.cpp  ExperimentalEngine.vcxproj  ExperimentalEngine.vcxproj.filters  Fatal.cpp  Fatal.hpp  GTAORenderPass.cpp  GameControls.cpp  GuiUtil.cpp  GuiUtil.hpp  (+103 more)
ExperimentalEngine/Audio/: Audio.cpp  Audio.hpp
ExperimentalEngine/ComponentMeta/: ComponentFuncs.cpp  ComponentFuncs.hpp  D6JointEditor.hpp  meson.build
ExperimentalEngine/Core/: AssetDB.cpp  Console.cpp  Engine.cpp  Engine.hpp  IGameEventHandler.hpp  JobSystem.cpp  SplashWindow.cpp  meson.build
ExperimentalEngine/Editor/: DefaultUITheme.cpp  Editor.cpp  Editor.hpp  EditorUndo.cpp  GuiUtil.cpp  GuiUtil.hpp  UITextureManager.cpp  UITextureManager.hpp  meson.build
ExperimentalEngine/IO/: IOUtil.cpp  IOUtil.hpp  physfs.hpp
ExperimentalEngine/ImGui/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
ExperimentalEngine/Input/: meson.build
ExperimentalEngine/Libs/: meson.build  spirv_reflect.h  tiny_obj_loader.cc
ExperimentalEngine/Physics/: D6Joint.cpp  D6Joint.hpp  FilterEntities.hpp  Physics.cpp  Physics.hpp  PhysicsActor.hpp  meson.build
ExperimentalEngine/Render/: BRDFLUTRenderer.cpp  BlurRenderPass.cpp  Camera.hpp  CubemapConvoluter.cpp  CubemapSlots.cpp  GTAORenderPass.cpp  ImGuiRenderPass.cpp  MaterialSlots.cpp  PolyRenderPass.cpp  Render.hpp  RenderTexture.cpp  ResourceSlots.hpp  ShaderMetadata.cpp  ShadowmapRenderPass.cpp  TonemapRenderPass.cpp  meson.build  vkrender.cpp  vkswapchain.cpp
ExperimentalEngine/ScriptBindings/: Transform.hpp  Vec3.hpp
ExperimentalEngine/Scripting/: ScriptUtil.hpp  WrenVM.cpp  WrenVM.hpp  meson.build
ExperimentalEngine/Serialization/: ESceneSerializationFunctions.cpp  SceneSerialization.cpp  SceneSerialization.hpp  SceneSerializationFuncs.hpp
ExperimentalEngine/Util/: CreateModelObject.hpp  EarlySDLUtil.cpp  EnumUtil.hpp  PCH.hpp  RichPresence.cpp  StaticLinkedList.hpp  VKImGUIUtil.cpp  VKImGUIUtil.hpp  generate_meson_build.py  meson.build
ExperimentalEngine/VR/: OpenVRInterface.cpp  OpenVRInterface.hpp
ExperimentalEngine/glad/: glad.h
ExperimentalEngine/vku/: vku.hpp
LonelyGalaxy/: CMakeLists.txt  Client.cpp  Client.hpp  ContactDamageDealer.hpp  CustomComponentMeta.cpp  DamageForwarder.hpp  DamagingProjectile.hpp  DebugArrow.cpp  DebugArrow.hpp  EventHandler.cpp  EventHandler.hpp  GameClient.cpp  GameClient.hpp  GameServer.cpp  GameServer.hpp  Grabbable.hpp  GripPoint.hpp  Gun.hpp  IPlayerInput.hpp  LocospherePlayerSystem.cpp  LocospherePlayerSystem.hpp  LonelyGalaxy.rc  Main.cpp  Manifest.xml  MathsUtil.cpp  MathsUtil.hpp  MultiplayerManager.cpp  MultiplayerManager.hpp  NetBase.cpp  NetMessage.cpp  NetMessage.hpp  Network.hpp  ObjectParentSystem.cpp  ObjectParentSystem.hpp  PhysHandSystem.cpp  PhysHandSystem.hpp  PhysicsSoundComponent.hpp  PidController.hpp  PlayerGrabManager.cpp  PlayerGrabManager.hpp  (+17 more)
LonelyGalaxy/Enemies/: DroneAI.hpp  DroneAISystem.cpp  meson.build
R2/: CMakeLists.txt  meson.build
R2/PrivateInclude/: vk_mem_alloc.h
R2/Source/: BindlessTextureManager.cpp  Renderer.cpp  SubAllocatedBuffer.cpp  meson.build
Tools/WMDLConvert/: WMDLConvert.vcxproj  WMDLConvert.vcxproj.filters  convert.cpp  meson.build  weldmesh.cpp
WorldsEngine/: CMakeLists.txt  PCH.hpp  generate_meson_build.py  meson.build
WorldsEngine/AssetCompilation/: AssetCompilerUtil.cpp  AssetCompilerUtil.hpp  AssetCompilers.cpp  AssetCompilers.hpp  ModelCompiler.cpp  ModelCompiler.hpp  RawTextureLoader.cpp  RawTextureLoader.hpp  TextureCompiler.cpp  TextureCompiler.hpp  meson.build
WorldsEngine/Audio/: Audio.cpp  Audio.hpp  CMakeLists.txt  PhononFmod.hpp  meson.build  stb_vorbis.c
WorldsEngine/ComponentMeta/: CMakeLists.txt  ComponentEditorUtil.hpp  ComponentFuncs.cpp  ComponentFuncs.hpp  ComponentMetadata.cpp  ComponentMetadata.hpp  D6JointEditor.hpp  meson.build
WorldsEngine/Core/: AssetDB.cpp  AssetDB.hpp  ConVar.hpp  Console.cpp  Console.hpp  DebugWindow.cpp  DefaultUITheme.cpp  EarlySDLUtil.cpp  EarlySDLUtil.hpp  Engine.cpp  Engine.hpp  EngineArguments.cpp  EngineInternal.hpp  Fatal.cpp  Fatal.hpp  HierarchyUtil.cpp  HierarchyUtil.hpp  IGameEventHandler.hpp  ISystem.hpp  ImGuiSetup.cpp  JobSystem.cpp  JobSystem.hpp  Log.hpp  LogCategories.hpp  MaterialManager.cpp  MaterialManager.hpp  MeshManager.cpp  MeshManager.hpp  NameComponent.hpp  SplashWindow.cpp  SplashWindow.hpp  TaskScheduler.hpp  Transform.hpp  Window.cpp  Window.hpp  WorldComponents.cpp  WorldComponents.hpp  meson.build
(+1810 files in other folders)
