sources = [
    'Events.cpp',
    'ConvergeEventHandler.cpp',
    'LocospherePlayerSystem.cpp',
    'Main.cpp',
    'resource.h',
    'ConvergeEventHandler.hpp',
    'LocospherePlayerSystem.hpp',
    'PidController.hpp',
    'PhysHandController.hpp',
    'PhysHandController.cpp',
    'MathsUtil.hpp',
    'MathsUtil.cpp'
]

executable('converge', sources, include_directories: [physx_include_dir, extern_include_dir], dependencies: [worlds_dep])
