sources = [
    'Events.cpp',
    'ConvergeEventHandler.cpp',
    'LocospherePlayerSystem.cpp',
    'Main.cpp',
    'resource.h',
    'ConvergeEventHandler.hpp',
    'LocospherePlayerSystem.hpp',
    'PidController.hpp',
    'PhysHandSystem.hpp',
    'PhysHandSystem.cpp',
    'MathsUtil.hpp',
    'MathsUtil.cpp',
    'DebugArrow.cpp',
    'DebugArrow.hpp',
    'ObjectParentSystem.cpp',
    'ObjectParentSystem.hpp',
    'Client.hpp',
    'Client.cpp',
    'Server.hpp',
    'Server.cpp',
    'Network.hpp',
    'NetBase.cpp',
    'NetMessage.hpp',
    'NetMessage.cpp'
]

executable('converge', sources, 
  include_directories: [physx_include_dir, extern_include_dir], 
  dependencies: [worlds_dep, discord_sdk_dep, wren_dep])
