sdk_sources = [
    'achievement_manager.cpp',
    'activity_manager.cpp',
    'application_manager.cpp',
    'core.cpp',
    'image_manager.cpp',
    'lobby_manager.cpp',
    'network_manager.cpp',
    'overlay_manager.cpp',
    'relationship_manager.cpp',
    'storage_manager.cpp',
    'store_manager.cpp',
    'types.cpp',
    'user_manager.cpp',
    'voice_manager.cpp',
    'achievement_manager.h',
    'activity_manager.h',
    'application_manager.h',
    'core.h',
    'discord.h',
    'event.h',
    'ffi.h',
    'image_manager.h',
    'lobby_manager.h',
    'network_manager.h',
    'overlay_manager.h',
    'relationship_manager.h',
    'storage_manager.h',
    'store_manager.h',
    'types.h',
    'user_manager.h',
    'voice_manager.h',
]

discord_sdk_inc = include_directories('.')
discord_sdk = static_library('discord_sdk', sdk_sources, include_directories: discord_sdk_inc)
discord_sdk_dep = declare_dependency(include_directories: discord_sdk_inc, link_with: discord_sdk)
